<resources>
    <string name="app_name">Home lights</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="light_out">LIGHTS OUT</string>
    <string name="Program">Programma</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="textview">TextView</string>
    <string name="light">Licht</string>
</resources>
