<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:gravity="center"
        android:text="@string/home"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/RoomName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textview"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="1dp"
            android:text="@string/Program"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="159dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/from" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:text="@string/to" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>